# fdint

./: README.rst  build.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
